# nersemble

./: .gitignore  README.md  environment.yml  index.html  pyproject.toml
scripts/: validate_poses.py
scripts/evaluate/: evaluate_nersemble.py
scripts/render/: render_nersemble.py
scripts/train/: train_nersemble.py
src/nersemble/: constants.py  env.py
src/nersemble/data_manager/: multi_view_data.py
src/nersemble/model_manager/: base.py  evaluation.py  nersemble.py
src/nersemble/nerfstudio/config/: nersemble_trainer_config.py
src/nersemble/nerfstudio/data/: nersemble_pixel_sampler.py
src/nersemble/nerfstudio/datamanager/: nersemble_datamanager.py
src/nersemble/nerfstudio/dataparser/: nersemble_dataparser.py
src/nersemble/nerfstudio/dataset/: nersemble_dataset.py
src/nersemble/nerfstudio/engine/: generic_scheduler.py  nersemble_trainer.py  step_lr_scheduler.py
src/nersemble/nerfstudio/field_components/: deformation_field.py  hash_ensemble.py  windowed_nerf_encoding.py
src/nersemble/nerfstudio/fields/: nersemble_nerfacto_field.py
src/nersemble/nerfstudio/model_components/: frustum.py  nersemble_deformation_renderer.py  nersemble_volumetric_sampler.py
src/nersemble/nerfstudio/models/: base.py  nersemble_instant_ngp.py
src/nersemble/util/: chunker.py  connected_components.py  pytorch3d.py  quantization.py  render.py  setup.py
static/css/: index.css
static/js/: index.js
